# icepy4d

./: .gitignore  .gitignore.txt  .gitmodules  .pre-commit-config.yaml  04_3d_timeseries_analysis.ipynb  CITATION.cff  LICENSE.txt  README.md  __main__.py  _tmp.py  aaa.py  belpy.ipynb  belpy.py  belpy.py.f599749a6cdc8ec0be10a81b08efeeb7.tmp  belpy_env.yml  belpy_main.ipynb  belpy_main.py  belvedere_20220728_sparse_LOC.ply.REMOVED.git-id  cam0.txt  download_data.sh  dsm_approx.tif  dsm_approx.tif.REMOVED.git-id  dummy.py  ep180.png.REMOVED.git-id  ep181.png.REMOVED.git-id  interactive_drawing.py  main.py  main_dev.py  main_experimental.py  main_experimental_interactive.ipynb  main_experimental_tracking.py  matching.ipynb  meshing.py  meshing_class.py  mkdocs.yml  multi_cam_dev.py  mutlitemporal_workflow.ipynb  py4dgeo.ipynb  pyproject.toml  requirements-dev.txt  (+19 more)
.github/: main.yml
.ipynb_checkpoints/: belpy-checkpoint.py  belpy_main-checkpoint.ipynb
assets/: Metashape-1.8.5-cp35.cp36.cp37.cp38-abi3-linux_x86_64.whl.REMOVED.git-id  config.yaml
cloudcompy/: DOD_res_X_20cm.csv  DOD_res_X_20cm.ods  DOD_res_x_20cm.csv  DOD_res_x_20cm.ods  DOD_res_z_20cm.csv  cloudcompy.py  crop_polyline.poly  dummy.py  meshing.py  parallel_test.py  test.csv  volume_variations.ipynb  volume_variations.py  volume_variations_old.py
config/: config_2021.yaml  config_2021_1.yaml  config_2022.yaml  config_2022_2.yaml  config_2022_3.yaml  config_2022_exp.yaml  config_2022_summer.yaml  config_base.yaml  config_block_1.yaml  config_block_2.yaml  config_block_3.yaml  config_block_3_4.yaml  config_block_4.yaml  config_microclim.yaml  config_test.yaml  config_test_tracking.yaml  opt_matching.json  opt_tracking.json
data/: .~lock.image_list.ods#  belpy2807_markers_images.csv  belpy_images.ods  camera_ini_pos.csv  camera_ini_pos_LOC.csv  crop_polyline.poly  download_data.sh  download_imgs.sh  image_list.ods  image_list.xlsx  target_image_p1.csv  target_image_p1.txt  target_image_p1_with_labels.txt  target_image_p2.csv  target_image_p2.txt  target_image_p2_all.csv  target_image_p3.txt  target_images.txt  target_world.csv  target_world_all.csv  target_world_p1.csv
docs/: camera.md  gen_ref_pages.py  getting_started.md  index.md  installation.md  prova.md  single_epoch_stereo_reconstruction.ipynb  visualization.md
for_bba/: targets_p1.txt  targets_p2.txt  targets_world.txt
images/: IMG_0520.jpg.REMOVED.git-id
(+989 files in other folders)
