[metadata]
name = icepy
version = 0.1
author = Francesco Ioli
author_email = francesco.ioli@polimi.it
description = 4D Image-based Continuos monitoring of glaciers Evolution with low-cost stereo-cameras and Deep Learning photogrammetry.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/franioli/icepy4d
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir=
    =src
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where=src  # . by default
include=icepy*